# fde-consultants-protocoles

./: .gitignore  .pre-commit-config.yaml  BUNDLE_SHA256.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL_TRUST_SCORE.json  THIRD_PARTY_NOTICES.md  install.sh  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  pages.yml  release.yml
hermes/: install.sh
modex/: LICENSE-SYSTEM.md  PRICING.md  README.md  arbiters.py  certify_skill.py  collective.py  engage.py  fulfillment.py  generate.sh  init.sh  license.py  modex.yaml  orchestrator.py  plugin_loader.py  polar_webhook.py  specialists.py  stripe_webhook.py  verify.sh
portal/: build_trust.py
registry/: 2026-06-21-fintech-fraud-93.json  2026-06-21-retail-forecasting-91.json  2026-06-21-saas-churn-93.json  README.md  _build_chain.py  genesis.json  index.json
scripts/: cleanup_generated.sh
skill/: .fde_lessons.json  .gitignore  AGENT-INSTALL.md  CONTRIBUTING.md  INSTALL.md  README.md  SKILL.md  ZERO-INSTALL.md  agents.manifest.json  codex.yaml  requirements.txt  system-prompt-fde.md
skill/mcp_server/: README.md  __init__.py  __main__.py  pyproject.toml  server.py
skill/mcp_server/tools/: __init__.py  decompose.py  evals.py  ontology.py  recon.py  roi.py  scientific_search.py  trust_score.py
skills/: aider.md  chatgpt.md  claude-code.md  cline.md  codex.md  continue-dev.md  cursor.md  gemini.md  hermes.md  kiro.md  openclaw.md  roo-code.md  trae.md  windsurf.md  zed.md
spec/: README.md
template-skill/: README.md  SKILL.md
(+118 files in other folders)
